syntax = "proto3";

package watertank;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "Gateway.Protos";

message WaterTankWaterLevelReading {
    string waterTankName = 1;
    google.protobuf.Timestamp readingTime = 2;
    double waterLevel = 3;
}

message DeleteWaterTankWaterLevelReadingDto {
    string waterTank = 1;
    google.protobuf.Timestamp readingTime = 2;
}

message WaterTankWaterLevelAggregate {
    double min = 1;
    double max = 2;
    double avg = 3;
    double sum = 4;
}

service WaterTankService {
    rpc RegisterReading(WaterTankWaterLevelReading) returns (google.protobuf.Empty);
    rpc UpdateReading(WaterTankWaterLevelReading) returns (google.protobuf.Empty);
    rpc DeleteReading(DeleteWaterTankWaterLevelReadingDto) returns (google.protobuf.Empty);
    rpc GetWaterTankWaterLevelReadingAtTime(GetReadingRequest) returns (WaterTankWaterLevelReading);
    rpc GetWaterTankWaterLevelReadingsInInterval(GetReadingsIntervalRequest) returns (WaterTankWaterLevelReadingsResponse);
    rpc GetWaterTankWaterLevelReadingAggregatesForTimePeriod(GetReadingsIntervalRequest) returns (WaterTankWaterLevelAggregate);
}

message GetReadingRequest {
    string waterTank = 1;
    google.protobuf.Timestamp readingTime = 2;
}

message GetReadingsIntervalRequest {
    string waterTank = 1;
    google.protobuf.Timestamp startTime = 2;
    google.protobuf.Timestamp endTime = 3;
}

message WaterTankWaterLevelReadingsResponse {
    repeated WaterTankWaterLevelReading readings = 1;
}
